# VanguardOps

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  vanguardops.db
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: e587c6b5f1c0_initial_schema.py
app/: bootstrap.py  database.py  main.py
app/api/: deps.py  router.py
app/api/endpoints/: activity_log.py  assets.py  auth.py  health.py  tickets.py  workflows.py
app/core/: config.py  error_handlers.py  exceptions.py  logging.py  middleware.py  middleware_security.py  observability.py  security.py
app/crud/: __init__.py  base.py  crud_activity_log.py  crud_asset.py  crud_ticket.py  crud_user.py  crud_workflow.py
app/models/: __init__.py  _mixins.py  activity_log.py  asset.py  ticket.py  user.py  workflow.py
app/schemas/: activity_log.py  asset.py  auth.py  common.py  ticket.py  workflow.py
app/services/: activity_log_service.py  assignment_service.py  auth_service.py  ip_banlist.py  rate_limiter.py  rules.py  security_redis.py  ticket_service.py  token_blacklist.py  workflow_service.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
app/workers/: celery_app.py  tasks.py  workflow_executor.py
docs/: api.md
docs/adr/: 001-arquitectura-en-capas.md  002-errores-rfc-7807.md  003-autenticacion-jwt.md  004-alembic-migraciones.md  005-celery-claim-atomico.md  006-docker-hardening-y-aislamiento.md  007-jwt-blacklist-fail-closed.md  008-rate-limit-and-ip-banning.md  README.md  _template.md
tests/: _fakes.py  conftest.py  factories.py  test_assets.py  test_auth.py  test_celery.py  test_functional.py  test_health.py  test_ip_banlist.py  test_rate_limiter.py  test_rules.py  test_security.py  test_security_hardening.py  test_security_middleware.py  test_tickets.py  test_token_blacklist.py  test_workflows.py
tests/integration/: conftest.py  test_workflow_concurrency.py
